Template to include images

--- a/chat-backend/.env.example
+++ b/chat-backend/.env.example
@@ -3,10 +3,10 @@ NODE_ENV=production
 
 # Server Configuration
 PORT=3000
-BACKEND_URL=https://your-render-app-name.onrender.com
+BACKEND_URL=https://learning-platform-ecosystem.onrender.com
 
 # AI Service Configuration
-GEMINI_API_KEY=your-gemini-api-key
+GEMINI_API_KEY=
 
 # CORS Configuration (comma-separated)
 ALLOWED_ORIGINS=https://prod.edrevel.com,https://your-lms-domain.com
