--- a/scorm-builder/package.json
+++ b/scorm-builder/package.json
@@ -4,48 +4,45 @@
     "description": "Production SCORM 2004 package generator for task-based learning with chat integration",
     "main": "build.js",
     "scripts": {
-      "build": "node build.js",
-      "build:all": "node build.js --all",
-      "build:topic": "node build.js --topic $npm_config_topic --dev --backend https://learning-platform-ecosystem.onrender.com",
-      "build:prod": "node build.js --topic $npm_config_topic --backend https://learning-platform-ecosystem.onrender.com",
-      
-      "clean": "rm -rf output/* temp/* test-output/*",
-      "clean:test": "rm -rf test-output && mkdir -p test-output",
-      
-      "extract": "node scripts/extract-topic.js",
-      "validate": "node scripts/validate-topics.js",
-      
-      "test:topic": "npm run validate && npm run build:topic && npm run extract && npm run serve:test",
-      "serve:test": "node test-server.js",
-      
-      "lint": "eslint .",
-      "prestart": "npm run validate"
+        "build": "node build.js",
+        "build:all": "node build.js --all",
+        "build:topic": "node build.js --topic $npm_config_topic --dev --backend https://learning-platform-ecosystem.onrender.com",
+        "build:prod": "node build.js --topic $npm_config_topic --backend https://learning-platform-ecosystem.onrender.com",
+        "clean": "rm -rf output/* temp/* test-output/*",
+        "clean:test": "rm -rf test-output && mkdir -p test-output",
+        "extract": "node scripts/extract-topic.js",
+        "validate": "node scripts/validate-topics.js",
+        "test:topic": "npm run validate && npm run build:topic && npm run extract && npm run serve:test",
+        "serve:test": "node test-server.js",
+        "lint": "eslint .",
+        "prestart": "npm run validate"
     },
     "dependencies": {
-      "mustache": "^4.2.0",
-      "archiver": "^6.0.1",
-      "fs-extra": "^11.1.1",
-      "chalk": "^4.1.2",
-      "commander": "^11.0.0",
-      "joi": "^17.9.2",
-      "uuid": "^9.0.0",
-      "xmldom": "^0.6.0",
-      "xpath": "^0.0.33"
+        "archiver": "^6.0.1",
+        "chalk": "^4.1.2",
+        "commander": "^11.0.0",
+        "fs-extra": "^11.1.1",
+        "joi": "^17.9.2",
+        "mustache": "^4.2.0",
+        "unzipper": "^0.12.3",
+        "uuid": "^9.0.0",
+        "xmldom": "^0.6.0",
+        "xpath": "^0.0.33"
     },
     "devDependencies": {
-      "jest": "^29.6.2",
-      "eslint": "^8.46.0",
-      "nodemon": "^3.0.1"
+        "eslint": "^8.46.0",
+        "jest": "^29.6.2",
+        "nodemon": "^3.0.1"
     },
     "keywords": [
-      "scorm",
-      "scorm-2004",
-      "elearning",
-      "lms",
-      "education",
-      "chat-integration"
+        "scorm",
+        "scorm-2004",
+        "elearning",
+        "lms",
+        "education",
+        "chat-integration"
     ],
     "engines": {
-      "node": ">=16.0.0"
+        "node": ">=16.0.0"
     }
-  }  
+}
