--- a/scorm-builder/topics/robot-arm-movement/config.json
+++ b/scorm-builder/topics/robot-arm-movement/config.json
@@ -10,8 +10,8 @@
   
   "content": {
     "hero_image": {
-      "src": "assets/images/robot-arm-hero.jpg",
-      "alt": "Industrial robot arm in action",
+      "src": "robot-arm-hero.jpg",
+      "alt": "Industrial robot arm in action", 
       "caption": "Modern 6-DOF industrial robot arm"
     },
     
@@ -25,12 +25,12 @@
     
     "task_images": [
       {
-        "src": "assets/images/robot-types.jpg",
+        "src": "robot-types.jpg",
         "alt": "Various robot arm types",
         "caption": "3-DOF, 5-DOF, and 6-DOF robot configurations"
       },
       {
-        "src": "assets/images/robot-classification.jpg",
+        "src": "robot-classification.jpg", 
         "alt": "Robot classification methods",
         "caption": "Different ways to classify robot arms"
       }
@@ -41,16 +41,16 @@
         "title": "Degrees of Freedom (DOF)",
         "summary": "The number of independent movements a robot can make",
         "image": {
-          "src": "assets/images/robot-types.jpg",
+          "src": "robot-types.jpg",
           "alt": "DOF concept illustration"
         },
         "learn_more_context": "dof_explanation"
       },
       {
-        "title": "Robot Classification", 
-        "summary": "Categorizing robots based on their movement capabilities",
+        "title": "Robot Classification",
+        "summary": "Categorizing robots based on their movement capabilities", 
         "image": {
-          "src": "assets/images/robot-classification.jpg",
+          "src": "robot-classification.jpg",
           "alt": "Robot classification chart"
         },
         "learn_more_context": "classification_methods"
@@ -73,7 +73,7 @@
     "options": ["3 DOF", "5 DOF", "6 DOF", "7 DOF"],
     "correct_answer": 2,
     "explanation_image": {
-      "src": "assets/images/robot-arm-hero.jpg",
+      "src": "robot-arm-hero.jpg",
       "alt": "6-DOF robot arm explanation"
     }
   },
