cors- academy.nebulaknowlab.com added

--- a/chat-backend/.env.example
+++ b/chat-backend/.env.example
@@ -9,7 +9,7 @@ BACKEND_URL=https://learning-platform-ecosystem.onrender.com
 GEMINI_API_KEY=
 
 # CORS Configuration (comma-separated)
-ALLOWED_ORIGINS=https://prod.edrevel.com,https://your-lms-domain.com
+ALLOWED_ORIGINS=https://prod.edrevel.com,https://academy.nebulaknowlab.com
 
 # Logging
 LOG_LEVEL=info
